Bug 312956 - Desktop Effects - Zoom: Mouse Tracking "Push" laggy, inprecise and/or not working
Summary: Desktop Effects - Zoom: Mouse Tracking "Push" laggy, inprecise and/or not wor...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 4.9.5
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 4.11
Assignee: KWin default assignee
URL:
Keywords:
: 312958 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-01-09 15:59 UTC by tormen
Modified: 2013-01-28 07:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:
thomas.luebking: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tormen 2013-01-09 15:59:34 UTC
The push mouse tracking is a very good option and I am very glad it exists!

I noticed these 3 annoyances when using the push function, which are probably 3 effects of one or more bugs in the zoom code:

 (a) Sometimes pushes are not registered:
 When trying to push in different directions (lets say I am in the bottom-left corner with my zoom area and I first push right (moving the mouse pointer to the right border of the screen and right away again to the center) and when its finished pushing/moving then I start pushing to the TOP ... in enough cases (to be annoying ;) the second move is not registered, so to make it happen you have to move the mouse again.

 (b) Consecutive pushes sometimes don't work:
I started playing around and wanted to push to any of the 4 screen corners and noticed that it started pushing, but at some point the pushes stopped even though I was not yet in the corner and also a repeated movement with the mouse in the right direction (at the screen border) did nothing. Even moving the mouse away from the border (to the center) and back onto the border did not work. Eventually I always got it to the corner, but with MANY tries in some cases.

 (c) Sometimes pushes are executed immediately and sometimes pushes are executed not at all and sometimes pushes are executed after a long time and sometimes pushes are executed after moving the mouse further "over and beyond" the screen border in which direction the push should go. This inconsistant behaviour is annoying and time consuming. As you switch between waiting, moving the mouse further or trying again (moving the mouse away and again towards and onto the screen border).


Reproducible: Always
Comment 1 Thomas Lübking 2013-01-09 16:41:44 UTC
The behavior is indeed weird.
Comment 2 Thomas Lübking 2013-01-09 16:46:19 UTC
*** Bug 312958 has been marked as a duplicate of this bug. ***
Comment 3 Thomas Lübking 2013-01-12 07:46:11 UTC
http://git.reviewboard.kde.org/r/108359/
Comment 4 Thomas Lübking 2013-01-23 21:12:24 UTC
Git commit 57083f1803308a5e1bafa65fc5095e50d0d39630 by Thomas Lübking.
Committed on 12/01/2013 at 02:59.
Pushed by luebking into branch 'master'.

push zoomregion on contact

M  +11   -13   kwin/effects/zoom/zoom.cpp

http://commits.kde.org/kde-workspace/57083f1803308a5e1bafa65fc5095e50d0d39630