push zoomregion on contact

BUG: 312956